--- a/PowerEditor/visual.net/Textrument.vcxproj.filters
+++ b/PowerEditor/visual.net/Textrument.vcxproj.filters
@@ -22,7 +22,6 @@
     <ClCompile Include="..\src\WinControls\InsituDebug.cpp" />
     <ClCompile Include="..\src\WinControls\OpenSaveFileDialog\CustomFileDialog.cpp" />
     <ClCompile Include="..\src\WinControls\TabBar\ControlsTab.cpp" />
-    <ClCompile Include="..\src\ScintillaComponent\DocTabView.cpp" />
     <ClCompile Include="..\src\WinControls\DocumentMap\documentMap.cpp" />
     <ClCompile Include="..\src\EncodingMapper.cpp" />
     <ClCompile Include="..\src\WinControls\OpenSaveFileDialog\FileDialog.cpp" />
@@ -78,7 +77,6 @@
     <ClCompile Include="..\src\ScintillaComponent\SmartHighlighter.cpp" />
     <ClCompile Include="..\src\WinControls\SplitterContainer\Splitter.cpp" />
     <ClCompile Include="..\src\WinControls\SplitterContainer\SplitterContainer.cpp" />
-    <ClCompile Include="..\src\WinControls\StaticDialog\StaticDialog.cpp" />
     <ClCompile Include="..\src\WinControls\StatusBar\StatusBar.cpp" />
     <ClCompile Include="..\src\WinControls\TaskList\TaskList.cpp" />
     <ClCompile Include="..\src\WinControls\TaskList\TaskListDlg.cpp" />
@@ -175,6 +173,15 @@
     <ClCompile Include="..\src\Utf8_16.cpp">
       <Filter>TextView</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\ScintillaComponent\DocTabView.cpp">
+      <Filter>TextView</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\WinControls\Window.cpp">
+      <Filter>Core</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\WinControls\StaticDialog\StaticDialog.cpp">
+      <Filter>Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\clipboardFormats.h" />
@@ -218,7 +225,6 @@
     <ClInclude Include="..\src\WinControls\StaticDialog\RunDlg\RunDlg_rc.h" />
     <ClInclude Include="..\src\WinControls\Preference\resource.h" />
     <ClInclude Include="..\src\WinControls\TabBar\ControlsTab.h" />
-    <ClInclude Include="..\src\ScintillaComponent\DocTabView.h" />
     <ClInclude Include="..\src\WinControls\DocumentMap\documentMap.h" />
     <ClInclude Include="..\src\EncodingMapper.h" />
     <ClInclude Include="..\src\WinControls\OpenSaveFileDialog\FileDialog.h" />
@@ -278,7 +284,6 @@
     <ClInclude Include="..\src\ScintillaComponent\SmartHighlighter.h" />
     <ClInclude Include="..\src\WinControls\SplitterContainer\Splitter.h" />
     <ClInclude Include="..\src\WinControls\SplitterContainer\SplitterContainer.h" />
-    <ClInclude Include="..\src\WinControls\StaticDialog\StaticDialog.h" />
     <ClInclude Include="..\src\WinControls\StatusBar\StatusBar.h" />
     <ClInclude Include="..\src\WinControls\TaskList\TaskList.h" />
     <ClInclude Include="..\src\WinControls\TaskList\TaskListDlg.h" />
@@ -395,6 +400,12 @@
       <Filter>TextView</Filter>
     </ClInclude>
     <ClInclude Include="..\src\WinControls\Window.h">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\ScintillaComponent\DocTabView.h">
+      <Filter>TextView</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\WinControls\StaticDialog\StaticDialog.h">
       <Filter>Core</Filter>
     </ClInclude>
   </ItemGroup>
